WIP: Client side codegen
